--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,3 @@
-TWITCH_API_CLIENT_ID=7kotzlu6xputzo2soj7pmlpmoedtrj
-TWITCH_API_CLIENT_SECRET=gi874i5b02ijt6ouzcfft00l0wtuu3
+TWITCH_API_CLIENT_ID=<your client id>
+TWITCH_API_CLIENT_SECRET=
+TWITCH_API_USERNAME=
