--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,3 @@
 TWITCH_API_CLIENT_ID=<your client id>
-TWITCH_API_CLIENT_SECRET=
-TWITCH_API_USERNAME=
+TWITCH_API_CLIENT_SECRET=<your client secret>
+TWITCH_API_USERNAME=<your twitch username>
