--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server:json": "json-server --watch ./server/db.json --port 3001",
     "server:clipper:debug": "nodemon ./server/index.js",
     "server:clipper": "node ./server/index.js",
+    "client": "cd ./client && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
