--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "get-audio-duration": "^3.0.0",
     "mongodb": "^4.1.4",
+    "single-line-log": "^1.1.2",
     "twitchdl": "0.0.2",
     "vosk": "^0.3.32"
   },
