--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "get-audio-duration": "^3.0.0",
+    "get-video-duration": "^4.1.0",
     "mongodb": "^4.1.4",
     "single-line-log": "^1.1.2",
     "twitchdl": "0.0.2",
